finished crypt floor with ceilling

--- a/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1202,7 +1202,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=440.000
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1627,6 +1627,43 @@ Actor.Actor=True
 StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.Materials=True
+BP_Cell_Door_C.TransformCommon=True
+BP_Cell_Door_C.Rendering=True
+BP_Cell_Door_C.Replication=True
+BP_Cell_Door_C.Collision=True
+BP_Cell_Door_C.HLOD=True
+BP_Cell_Door_C.Physics=True
+BP_Cell_Door_C.Networking=True
+BP_Cell_Door_C.Input=True
+BP_Cell_Door_C.Actor=True
+BP_Dungeon_Doorway_C.Replication=True
+BP_Dungeon_Doorway_C.Input=True
+BP_Dungeon_Doorway_C.TransformCommon=True
+BP_Dungeon_Doorway_C.Rendering=True
+BP_Dungeon_Doorway_C.Collision=True
+BP_Dungeon_Doorway_C.HLOD=True
+BP_Dungeon_Doorway_C.Physics=True
+BP_Dungeon_Doorway_C.Networking=True
+BP_Dungeon_Doorway_C.Actor=True
+Emitter.TransformCommon=True
+Emitter.Materials=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Attachment=True
+Emitter.LOD=True
+Emitter.Lighting=True
+Emitter.HLOD=True
+Emitter.Rendering=True
+Emitter.PathTracing=True
+Emitter.Navigation=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Physics=True
+Emitter.Networking=True
+Emitter.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1637,11 +1674,17 @@ MRUItem0=/Game/Dungeon
 MRUItem1=/Game/MedievalDungeon/Maps/Demonstration
 
 [PlacementMode]
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Ceiling.SM_Ceiling;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Ceiling_Flat.SM_Crypt_Ceiling_Flat;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Cell_Side.SM_Cell_Side;
+RecentlyPlaced=/Game/MedievalDungeon/Particles/P_Pit_Fire.P_Pit_Fire;
+RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Cell_Door.BP_Cell_Door;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Cell_Front.SM_Cell_Front;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Cell_Door.SM_Cell_Door;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Floor.SM_Crypt_Floor;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Stairs_5.SM_Stairs_5;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Wall.SM_Crypt_Wall;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Stairs_10.SM_Stairs_10;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Cell_Side.SM_Cell_Side;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Dungeon_Wall_Half.SM_Dungeon_Wall_Half;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Dungeon_Wall.SM_Dungeon_Wall;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Floor.SM_Floor;
