ceilings, floors and walls done

--- a/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1185,7 +1185,7 @@ MovieSceneCapture.TimeStamp=2023.08.29-13.25.09
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1257,7 +1257,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/MedievalDungeon/Meshes/Props
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1674,18 +1674,24 @@ MRUItem0=/Game/Dungeon
 MRUItem1=/Game/MedievalDungeon/Maps/Demonstration
 
 [PlacementMode]
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Ceiling.SM_Ceiling;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Ceiling_Flat.SM_Crypt_Ceiling_Flat;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Cell_Side.SM_Cell_Side;
-RecentlyPlaced=/Game/MedievalDungeon/Particles/P_Pit_Fire.P_Pit_Fire;
-RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Cell_Door.BP_Cell_Door;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Torch.SM_Torch;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Torture_Chair.SM_Torture_Chair;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Decor_Chains_A.SM_Decor_Chains_A;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Handcuff.SM_Handcuff;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Gibbet_Cage.SM_Gibbet_Cage;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_05.SM_Skeleton_05;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_01.SM_Skeleton_01;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Mausoleum.SM_Mausoleum;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_02.SM_Skeleton_02;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Lock_Open.SM_Lock_Open;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Wood_G.SM_Wood_G;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Wood_F.SM_Wood_F;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Wood_D.SM_Wood_D;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Decor_Chains_B.SM_Decor_Chains_B;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Ball_And_Chain.SM_Ball_And_Chain;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Bed.SM_Bed;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Cell_Front.SM_Cell_Front;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Cell_Door.SM_Cell_Door;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Floor.SM_Crypt_Floor;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Stairs_5.SM_Stairs_5;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Wall.SM_Crypt_Wall;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Stairs_10.SM_Stairs_10;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Dungeon_Wall_Half.SM_Dungeon_Wall_Half;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Dungeon_Wall.SM_Dungeon_Wall;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Floor.SM_Floor;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Ceiling_Flat.SM_Ceiling_Flat;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Ceiling.SM_Ceiling;
 
