added all lights

--- a/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1187,7 +1187,7 @@ MaterialEditor.TimeStamp=2023.08.29-13.25.08
 MaterialEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1259,7 +1259,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Game/MedievalDungeon
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1783,6 +1783,30 @@ StaticMeshComponent.Cooking=True
 StaticMeshComponent.Mobile=True
 Actor.Replication=True
 Actor.Collision=True
+BP_Chandalier_C.TransformCommon=True
+BP_Chandalier_C.Default=True
+BP_Chandalier_C.Rendering=True
+BP_Chandalier_C.Replication=True
+BP_Chandalier_C.Collision=True
+BP_Chandalier_C.HLOD=True
+BP_Chandalier_C.Physics=True
+BP_Chandalier_C.Networking=True
+BP_Chandalier_C.Input=True
+BP_Chandalier_C.Actor=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.HLOD=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.PathTracing=True
+ParticleSystemComponent.Navigation=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1795,26 +1819,26 @@ MRUItem2=/Game/Dungeon
 MRUItem3=/Game/MedievalDungeon/Maps/Demonstration
 
 [PlacementMode]
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Bones_RibCage.SM_Bones_RibCage;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_03.SM_Skeleton_03;
+RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Chandalier.BP_Chandalier;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Chandelier.SM_Chandelier;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Alter.SM_Alter;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Bones_ScapulaRight.SM_Bones_ScapulaRight;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Bones_Skull.SM_Bones_Skull;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Bones_Hips.SM_Bones_Hips;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Bones_RibCage.SM_Bones_RibCage;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Bones_Neck.SM_Bones_Neck;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_05.SM_Skeleton_05;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_02.SM_Skeleton_02;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_01.SM_Skeleton_01;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Coffin.SM_Coffin;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Coffin_No_Lid.SM_Coffin_No_Lid;
+RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Bones_Hips.SM_Bones_Hips;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_07.SM_Skeleton_07;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Edge_Stones.SM_Edge_Stones;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Torch.BP_Torch;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
-RecentlyPlaced=/Engine/EngineSky/BP_Sky_Sphere.BP_Sky_Sphere;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Torch.SM_Torch;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Torture_Chair.SM_Torture_Chair;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Decor_Chains_A.SM_Decor_Chains_A;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Handcuff.SM_Handcuff;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Gibbet_Cage.SM_Gibbet_Cage;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_05.SM_Skeleton_05;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_01.SM_Skeleton_01;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Mausoleum.SM_Mausoleum;
-RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_02.SM_Skeleton_02;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1986,9 +2010,9 @@ bMaterialQualityUsed[2]=0
 bMaterialQualityUsed[3]=0
 
 [DetailPropertyExpansion]
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" "
-PrimitiveComponent="\"Object.Lighting.LightmassSettings\" "
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 Object=
