--- a/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CryptRaider/CryptRaider/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1188,6 +1188,8 @@ MaterialEditor.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/BP_CryptRaiderGameMode.BP_CryptRaiderGameMode
+OpenAssetsAtExit=/Game/BP_Player.BP_Player
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1204,7 +1206,7 @@ PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=440.000
-WindowSize=X=1294.000 Y=734.000
+WindowSize=X=1298.000 Y=738.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1259,7 +1261,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/MedievalDungeon
+ContentBrowserDrawer.SelectedPaths=/Game/MedievalDungeon/Meshes/Architecture/Dungeon
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1267,6 +1269,8 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=1
 ContentBrowserDrawer.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [DetailCategories]
 GeneralProjectSettings.About=True
@@ -1807,18 +1811,111 @@ ParticleSystemComponent.Navigation=True
 ParticleSystemComponent.Tags=True
 ParticleSystemComponent.Activation=True
 ParticleSystemComponent.Cooking=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.NaniteSettings=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+BP_CryptRaiderGameMode_C.Tick=True
+BP_CryptRaiderGameMode_C.Classes=True
+BP_CryptRaiderGameMode_C.Game=True
+BP_CryptRaiderGameMode_C.GameMode=True
+BP_CryptRaiderGameMode_C.Physics=True
+BP_CryptRaiderGameMode_C.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+BP_Player_C.TransformCommon=True
+BP_Player_C.Animation=True
+BP_Player_C.Mesh=True
+BP_Player_C.CameraSettings=True
+BP_Player_C.CameraOptions=True
+BP_Player_C.SkeletalMesh=True
+BP_Player_C.Tick=True
+BP_Player_C.Default=True
+BP_Player_C.ComponentTick=True
+BP_Player_C.Clothing=True
+BP_Player_C.Physics=True
+BP_Player_C.LeaderPoseComponent=True
+BP_Player_C.Collision=True
+BP_Player_C.Optimization=True
+BP_Player_C.Lighting=True
+BP_Player_C.AnimationRig=True
+BP_Player_C.Deformer=True
+BP_Player_C.LOD=True
+BP_Player_C.SkinWeights=True
+BP_Player_C.Rendering=True
+BP_Player_C.MaterialParameters=True
+BP_Player_C.HLOD=True
+BP_Player_C.PathTracing=True
+BP_Player_C.TextureStreaming=True
+BP_Player_C.Mobile=True
+BP_Player_C.Navigation=True
+BP_Player_C.RayTracing=True
+BP_Player_C.VirtualTexture=True
+BP_Player_C.Tags=True
+BP_Player_C.AssetUserData=True
+BP_Player_C.Replication=True
+BP_Player_C.ComponentReplication=True
+BP_Player_C.Activation=True
+BP_Player_C.Variable=True
+BP_Player_C.Cooking=True
+BP_Player_C.Camera=True
+BP_Player_C.PostProcess=True
+BP_Player_C.Input=True
+BP_Player_C.Weapon=True
+BP_Player_C.Character Movement (General Settings)=True
+BP_Player_C.Character Movement: Walking=True
+BP_Player_C.Character Movement: Jumping / Falling=True
+BP_Player_C.Character Movement (Networking)=True
+BP_Player_C.Character Movement: Swimming=True
+BP_Player_C.Character Movement: Flying=True
+BP_Player_C.Character Movement: Custom Movement=True
+BP_Player_C.Character Movement (Rotation Settings)=True
+BP_Player_C.Character Movement: Physics Interaction=True
+BP_Player_C.Character Movement=True
+BP_Player_C.Character Movement: Avoidance=True
+BP_Player_C.RootMotion=True
+BP_Player_C.Character Movement: NavMesh Movement=True
+BP_Player_C.NavMovement=True
+BP_Player_C.Velocity=True
+BP_Player_C.PlanarMovement=True
+BP_Player_C.MovementComponent=True
+BP_Player_C.Shape=True
+BP_Player_C.Character=True
+BP_Player_C.Pawn=True
+BP_Player_C.Actor=True
+BP_Player_C.WorldPartition=True
+BP_Player_C.Events=True
+BP_Player_C.Materials=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
 GameMapsSettings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_Torch_Dungeon
-MRUItem1=/Game/MedievalDungeon/Materials/M_Tiling_Master
-MRUItem2=/Game/Dungeon
-MRUItem3=/Game/MedievalDungeon/Maps/Demonstration
+MRUItem0=/Game/BP_Player
+MRUItem1=/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Floor
+MRUItem2=/Game/BP_CryptRaiderGameMode
+MRUItem3=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Floor
+MRUItem4=/Game/BP_Torch_Dungeon
+MRUItem5=/Game/MedievalDungeon/Materials/M_Tiling_Master
+MRUItem6=/Game/Dungeon
+MRUItem7=/Game/MedievalDungeon/Maps/Demonstration
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Skeletons/SM_Skeleton_03.SM_Skeleton_03;
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Chandalier.BP_Chandalier;
 RecentlyPlaced=/Game/MedievalDungeon/Meshes/Props/SM_Chandelier.SM_Chandelier;
@@ -1838,7 +1935,6 @@ RecentlyPlaced=/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Edge_Stones.
 RecentlyPlaced=/Game/MedievalDungeon/Blueprints/BP_Torch.BP_Torch;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Script/Engine.SkyLight;/Engine/Transient.ActorFactorySkyLight_0
-RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1847,6 +1943,8 @@ bUseUnsortedMenus=False
 [AssetEditorToolkitTabLocation]
 /Game/MedievalDungeon/Materials/M_Tiling_Master.M_Tiling_Master=0
 /Game/BP_Torch_Dungeon.BP_Torch_Dungeon=0
+/Game/MedievalDungeon/Meshes/Architecture/Dungeon/SM_Floor.SM_Floor=0
+/Game/MedievalDungeon/Meshes/Architecture/Crypt/SM_Crypt_Floor.SM_Crypt_Floor=0
 
 [MaterialEditor]
 PrimType=1
@@ -2016,6 +2114,8 @@ PrimitiveComponent=
 SceneComponent=
 ActorComponent=
 Object=
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
+StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[0]\" \"Object.StaticMesh.BodySetup.Object.AggGeom.BoxElems.BoxElems[1]\" "
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
